<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".PlayerSetup.Player_Setup">

    <TextView
        android:id="@+id/EnterPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/PlayerSetupTitle"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="12dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/player1"
                android:textColor="@color/red"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editText_Player1Name"
                app:layout_constraintBottom_toTopOf="@id/editText_Player1Name"
                />


            <EditText
                android:id="@+id/editText_Player1Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100sp"
                android:background="@drawable/edittext_setup"
                android:ems="10"
                android:hint="@string/NameHint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:padding="12dp"
                android:textColor="@color/red"
                android:textColorHint="@color/greyAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:enabled="true"
                app:layout_constraintBottom_toTopOf="@id/editText_Player2Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_Player2Name"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player2"
                android:textColor="#388E3C"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/editText_Player2Name"
                app:layout_constraintStart_toStartOf="@id/editText_Player2Name" />

            <EditText
                android:id="@+id/editText_Player2Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:hint="@string/NameHint"
                android:textColorHint="@color/greyAccent"
                android:layout_marginTop="100sp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:padding="12dp"
                android:background="@drawable/edittext_setup"
                app:layout_constraintBottom_toTopOf="@+id/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_Player1Name"
                android:importantForAutofill="no" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/red_button"
                android:onClick="submitButtonClick"
                android:padding="15sp"
                android:text="@string/submit_names"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/editText_Player2Name"
                tools:ignore="TextSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>