<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    tools:context=".GameDisplay.GameDisplay">
    <TextView
        android:id="@+id/player_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:text="@string/NameHint"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/play_AgainButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button"
            android:onClick="PlayAgainButtonClick"
            android:text="@string/PlayAgainButton"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/HomeButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/HomeButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/HomeButton"
            android:textColor="@color/white"
            android:layout_marginStart="20sp"
            android:onClick="HomeButtonClick"
            android:background="@drawable/red_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/play_AgainButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.noureldin.tictactoe.GameDisplay.TicTacToeBoard
        android:id="@+id/TicTacToeBoard"
        android:layout_width="wrap_content"
        android:layout_marginBottom="100sp"
        android:layout_height="wrap_content"
        android:background="@drawable/tictactoe_editboard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        custom:boardColor="@color/blue"
        custom:XColor="@color/red"
        custom:OColor="@color/green"
        custom:WinningLineColor="@color/yellow">

    </com.noureldin.tictactoe.GameDisplay.TicTacToeBoard>

</androidx.constraintlayout.widget.ConstraintLayout>